--- a/package.json
+++ b/package.json
@@ -2,50 +2,50 @@
   "name": "ember-intercom-api",
   "version": "0.1.1",
   "description": "Ember addon to make life easier when it comes to work with Intercom.io scripts (widget/API).",
+  "keywords": [
+    "ember-addon",
+    "intercom",
+    "intercom.io"
+  ],
+  "license": "MIT",
+  "author": "Tomasz Nieżurawski",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
+  "repository": "git@github.com:brandnewio/ember-intercom-api.git",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:testall"
+    "test": "ember try:each"
   },
-  "repository": "git@github.com:brandnewio/ember-intercom-api.git",
-  "engines": {
-    "node": ">= 0.10.0"
+  "dependencies": {
+    "ember-cli-babel": "^5.1.7"
   },
-  "author": "Tomasz Nieżurawski",
-  "license": "MIT",
+
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "ember-ajax": "0.7.1",
-    "ember-cli": "2.3.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.2.1",
-    "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^2.0.0",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "^2.12.1",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^3.1.0",
+    "ember-cli-shims": "^1.0.2",
+    "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.3.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-load-initializers": "^0.5.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
-    "ember-try": "^0.1.2",
+    "ember-source": "~2.12.0",
+    "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.0.0"
   },
-  "keywords": [
-    "ember-addon",
-    "intercom",
-    "intercon.io"
-  ],
-  "dependencies": {
-    "ember-cli-babel": "^5.1.5"
+  "engines": {
+    "node": ">= 4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
