--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
+    "ember-sinon": "^2.1.0",
+    "ember-sinon-qunit": "^3.1.0",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.0.0"
